[gd_scene load_steps=131 format=2]

[ext_resource path="res://assets/HoodCharacter/idle1.png" type="Texture" id=1]
[ext_resource path="res://scenes/MainScene/mainscripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/HoodCharacter/jumping.png" type="Texture" id=3]
[ext_resource path="res://assets/HoodCharacter/running.png" type="Texture" id=4]
[ext_resource path="res://assets/HoodCharacter/attacking.png" type="Texture" id=5]
[ext_resource path="res://assets/Metro/Dead-Sheet.png" type="Texture" id=6]
[ext_resource path="res://assets/HoodCharacter/FixedSlide.png" type="Texture" id=7]
[ext_resource path="res://assets/HoodCharacter/imgoingtokillnathan.png" type="Texture" id=8]
[ext_resource path="res://assets/HoodCharacter/Fall1.png" type="Texture" id=9]
[ext_resource path="res://assets/HoodCharacter/Fall2.png" type="Texture" id=10]
[ext_resource path="res://assets/HoodCharacter/sparkshot5.png" type="Texture" id=11]
[ext_resource path="res://assets/HoodCharacter/JumpAttack.png" type="Texture" id=12]
[ext_resource path="res://assets/HoodCharacter/damage.png" type="Texture" id=13]
[ext_resource path="res://assets/OtherAssets/healthbar.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 28 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 8 )
region = Rect2( 1800, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 8 )
region = Rect2( 2400, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 8 )
region = Rect2( 3000, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 8 )
region = Rect2( 3600, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 8 )
region = Rect2( 4200, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 8 )
region = Rect2( 4800, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 8 )
region = Rect2( 5400, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 8 )
region = Rect2( 6000, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 8 )
region = Rect2( 6600, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 8 )
region = Rect2( 7200, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 8 )
region = Rect2( 7800, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 8 )
region = Rect2( 8400, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 8 )
region = Rect2( 9000, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 8 )
region = Rect2( 9600, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 8 )
region = Rect2( 10200, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 8 )
region = Rect2( 10800, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 8 )
region = Rect2( 11400, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 8 )
region = Rect2( 12000, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 8 )
region = Rect2( 12600, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 8 )
region = Rect2( 13200, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 8 )
region = Rect2( 13800, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 8 )
region = Rect2( 14400, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 8 )
region = Rect2( 15000, 0, 600, 300 )

[sub_resource type="AtlasTexture" id=216]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=217]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=218]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=219]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=220]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 560, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 11 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 11 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 11 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 11 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 11 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 11 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 11 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 11 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 11 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=205]
atlas = ExtResource( 11 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=206]
atlas = ExtResource( 11 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=207]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=208]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=209]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=210]
atlas = ExtResource( 12 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=211]
atlas = ExtResource( 12 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=212]
atlas = ExtResource( 12 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=213]
atlas = ExtResource( 12 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=214]
atlas = ExtResource( 12 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ) ],
"loop": true,
"name": "BigBeam",
"speed": 5.0
}, {
"frames": [ SubResource( 216 ), SubResource( 217 ), SubResource( 218 ), SubResource( 219 ), SubResource( 220 ) ],
"loop": true,
"name": "Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "Fall1",
"speed": 5.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ) ],
"loop": true,
"name": "Fall2",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 192 ), SubResource( 193 ), SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ), SubResource( 204 ), SubResource( 205 ), SubResource( 206 ) ],
"loop": true,
"name": "SparkAttack",
"speed": 5.0
}, {
"frames": [ SubResource( 207 ), SubResource( 208 ), SubResource( 209 ), SubResource( 210 ), SubResource( 211 ), SubResource( 212 ), SubResource( 213 ), SubResource( 214 ) ],
"loop": true,
"name": "VoidSlash",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "WallSlide",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.58
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.42, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=116]
resource_name = "BigBeam"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "BigBeam" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=221]
resource_name = "Damage"
length = 0.405
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Damage" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=124]
resource_name = "Fall1"
length = 0.205
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Fall1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=125]
resource_name = "Fall2"
length = 0.305
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Fall2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frames")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 50 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.702
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="Animation" id=167]
resource_name = "SparkAttack"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "SparkAttack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14 ]
}

[sub_resource type="Animation" id=191]
resource_name = "VoidSlash"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "VoidSlash" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=84]
resource_name = "WallSlide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "WallSlide" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=215]
extents = Vector2( 24, 31 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -5, 0 )
scale = Vector2( 0.35, 0.35 )
collision_layer = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["Climber"]]
frames = SubResource( 50 )
animation = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/BigBeam = SubResource( 116 )
anims/Damage = SubResource( 221 )
anims/Death = SubResource( 4 )
anims/Fall1 = SubResource( 124 )
anims/Fall2 = SubResource( 125 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 51 )
anims/Run = SubResource( 6 )
anims/SparkAttack = SubResource( 167 )
anims/VoidSlash = SubResource( 191 )
anims/WallSlide = SubResource( 84 )

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2( -2, 2 )
shape = SubResource( 215 )

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.6

[node name="health_bar" type="TextureProgress" parent="."]
margin_left = -445.714
margin_top = -245.714
margin_right = -314.714
margin_bottom = -205.714
texture_over = ExtResource( 14 )

[node name="regen_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="InteractableDetection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 55, 0 )
collision_mask = 256
collide_with_areas = true
__meta__ = {
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
